initial changes for rumblestrip

--- a/default.hbs
+++ b/default.hbs
@@ -25,11 +25,14 @@
 </head>
 <body class="{{body_class}}">
     <nav id="navigator">
-        {{#if @blog.logo}}<a id="blog-logo" href="{{@blog.url}}"><div class="bloglogo" style="background: url({{@blog.logo}})"></div></a>{{/if}}
         <ul>
-            <li class="ghost"><a href="{{@blog.url}}" title="Blog"></a></li>
-            <li class="twitter"><a href="https://twitter.com/dcefram" title="Twitter" target="_blank"></a></li>
-            <li class="github"><a href="https://github.com/dcefram" title="GitHub" target="_blank"></a></li>
+            <li><a href="{{@blog.url}}" title="Home" target="_blank"><i class="fa fa-home fa-2x"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/robguglielmetti" title="LinkedIn" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+            <li><a href="https://github.com/rpg777" title="GitHub" target="_blank"><i class="fa fa-code-fork fa-2x"></i></a></li>
+            <li><a href="https://www.flickr.com/photos/rumblestrip-look/" title="Flickr" target="_blank"><i class="fa fa-camera-retro fa-2x"></i></a></li>
+            <li><a href="https://twitter.com/rpg777" title="Twitter" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
+            <li><a href="http://www.facebook.com/rob.guglielmetti" title="Facebook" target="_blank"><i class="fa fa-facebook fa-2x"></i></a></li>            
+            <li><a href="https://plus.google.com/+RobGuglielmetti" title="Google+" target="_blank"><i class="fa fa-google-plus fa-2x"></i></a></li>       
         </ul>
     </nav>
 
@@ -38,9 +41,9 @@
     <footer class="site-footer">
         <div class="inner">
             {{!> footer-description}}
-            <section class="copyright">&copy; {{date format="YYYY"}} <a href="/">{{@blog.title}}</a>. All rights reserved. | <a href="{{@blog.url}}/rss/" target="_blank">RSS</a></section>
-            <section>Contents are licensed under... <a href="http://creativecommons.org/licenses/by-nc/4.0/" target="_blank">Creative Commons</a>. Codes are <a href="http://opensource.org/licenses/MIT" target="_blank">MIT</a> :)</section>
-            <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org/"><span class="hidden">Ghost</span></a> and ❤</section>
+            <section class="copyright">&copy; {{date format="YYYY"}} <a href="/">{{@blog.title}}</a>. Some rights reserved. | <a href="{{@blog.url}}/rss/" target="_blank">RSS</a></section>
+            <section>This shit is licensed under <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">Creative Commons</a> (words, images) and <a href="http://opensource.org/licenses/MIT" target="_blank">MIT</a> (code).</section>
+            <section class="poweredby">Published with <a class="icon-ghost" href="http://ghost.org/"><span class="hidden">Ghost</span></a> and ❤</section>
         </div>
     </footer>
 
