--- a/post.hbs
+++ b/post.hbs
@@ -24,7 +24,7 @@
         </section>
 
         <section class="share">
-            <p class="info prompt">Share this post</p>
+            <p class="info prompt">Share this shit</p>
             <a href="http://twitter.com/share?text={{title}}&url={{url absolute="true"}}"
                 onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
                 <i class="fa fa-2x fa-fw fa-twitter"></i> <span class="hidden">Twitter</span>
