--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,14 +108,14 @@ img {
 }
 #navigator #blog-logo {
   display: inline-block;
-  max-width: 80px;
-  max-height: 80px;
+  max-width: 60px;
+  max-height: 60px;
   text-align: center;
   float: left;
 }
 #navigator #blog-logo .bloglogo {
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
 }
 #navigator ul {
   float: right;
@@ -133,25 +133,28 @@ img {
   background-color: #000;
   background-image: url("../images/github.png");
 }
+#navigator ul li.facebook a {
+  background-color: #55acee;
+  background-image: url("../images/facebook.png");
+}
 #navigator ul li {
   float: left;
-  height: 80px;
+  height: 60px;
   margin: 0;
-  padding: 0;
+  padding: 5;
 }
 #navigator ul li a {
-  background-size: 50px auto;
+  color: grey;
+  background-size: 40px auto;
   background-repeat: no-repeat;
   background-position: center center;
   display: inline-block;
-  padding: 0;
-  width: 80px;
-  height: 80px;
+  padding: 5;
   -webkit-transition: background-size ease 0.5s;
   transition: background-size ease 0.5s;
 }
 #navigator ul li a:hover {
-  background-size: 60px auto;
+  background-size: 50px auto;
 }
 /**
  * Site Head
