--- a/default.hbs
+++ b/default.hbs
@@ -44,6 +44,7 @@
             <section class="copyright">&copy; {{date format="YYYY"}} <a href="/">{{@blog.title}}</a>. Some rights reserved. | <a href="{{@blog.url}}/rss/" target="_blank">RSS</a></section>
             <section>This shit is licensed under <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">Creative Commons</a> (words, images) and <a href="http://opensource.org/licenses/MIT" target="_blank">MIT</a> (code).</section>
             <section class="poweredby">Published with <a class="icon-ghost" href="http://ghost.org/"><span class="hidden">Ghost</span></a> and ❤</section>
+            <section <!-- INSTANSIVE WIDGET --><script src="//instansive.com/widget/js/instansive.js"></script><iframe src="//instansive.com/widgets/88bcd60205ceff4570a529df06205fefdea2ddf8.html" id="instansive_88bcd60205" name="instansive_88bcd60205"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe></section>
         </div>
     </footer>
 
